[package]
name = "cikaj"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
aes-gcm = "0.10.3"
rand_core = "0.6.4"
tun = "0.6.1"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
once_cell = "1.20.2"
jwt = "0.16.0"
jsonwebtoken = "9.3.0"
actix = "0.13.5"
x25519-dalek = "2.0.1"
